BPER/DEVF/force-app/main/default/objects/LDAP__c/LDAP__c.object-meta.xml
<CustomObject>
    <label>LDAP</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome LDAP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDAP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>