BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Cognome__c.field-meta.xml
<CustomField>
    <fullName>Cognome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cognome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>