BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/CRM_PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>CRM_PermissionSet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM PermissionSet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>