BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Da_Elaborare__c.field-meta.xml
<CustomField>
    <fullName>Da_Elaborare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Da Elaborare</label>
    <type>Checkbox</type>
</CustomField>