BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/IDCed_Abilitati__c.field-meta.xml
<CustomField>
    <fullName>IDCed_Abilitati__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDCed Abilitati</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>