BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/IdCedFittizia__c.field-meta.xml
<CustomField>
    <fullName>IdCedFittizia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCed Fittizia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>