BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Idmstatustamaccountvalid__c.field-meta.xml
<CustomField>
    <fullName>Idmstatustamaccountvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Idmstatustamaccountvalid</label>
    <type>Checkbox</type>
</CustomField>