BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Matricola__c.field-meta.xml
<CustomField>
    <fullName>Matricola__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Matricola</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>