BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>