BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/OFS__c.field-meta.xml
<CustomField>
    <fullName>OFS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFS</label>
    <type>Checkbox</type>
</CustomField>