BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Ruolo_LDAP__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_LDAP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ruolo LDAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>