BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Ruolo_LDAP_Calcolato__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_LDAP_Calcolato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ruolo LDAP Calcolato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>