BPER/DEVF/force-app/main/default/objects/LDAP__c/fields/Vicario__c.field-meta.xml
<CustomField>
    <fullName>Vicario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vicario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>